Working on this again and fixed some isssues with the typing words being cropped and movign to another line.

--- a/styles/css/index.css
+++ b/styles/css/index.css
@@ -255,7 +255,6 @@ body {
 
 .cd-intro {
   width: 90%;
-  max-width: 768px;
   text-align: center;
 }
 
@@ -296,6 +295,7 @@ body {
 }
 .cd-words-wrapper b {
   display: inline-block;
+  padding-right: 10px;
   position: absolute;
   white-space: nowrap;
   left: 0;
